# SidewalkDetection

./: .gitignore  DataProcessing - Sidewalk Detection.ipynb  Dockerfile  LICENSE  Makefile  README.md  gpu_test.py  pyproject.toml  requirements.txt  run_docker.sh
scripts/: format.sh
training/: ch6_nb5_build_and_train_a_fcn8s_semantic_segmentation_model_for_smart_cars.ipynb
training/common/: Metrics.py  __init__.py  callbacks.py  common.py  loss.py  metrics.py
training/data/: __init__.py  dataset.py
training/experiments/: inference.py  run_training.py  scratch.py
training/model/: BaseModel.py  ConvBlock.py  __init__.py  basemodel.py  fcn.py  fcnBlock.py  fcnblock.py  unet.py
training/weights/: load_weights.py  scratch.py
