[tool.poetry]
name = "sidewalkdetection"
version = "0.1.0"
description = "Sidewalk Detection using image segmentation for autonomous robot navigation"
authors = ["Charbel Abi Hana <charbel-a-h@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow-gpu = "2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
