[tool.poetry]
name = "sidewalkdetection"
version = "0.1.0"
description = "Sidewalk Detection using image segmentation for autonomous robot navigation"
authors = ["Charbel Abi Hana <charbel-a-h@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow-gpu = "2.6"
opencv-python = "4.4.0.44"
scikit-image = "^0.19.2"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
